Update draw rates

--- a/draw.html
+++ b/draw.html
@@ -35,9 +35,10 @@
 			<label>Graph the probability of drawing at least
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
-			<textarea id="wishlist" name="wishlist" rows="5">Murgleis
-Izayoi
-Silver Fan</textarea>
+			<textarea id="wishlist" name="wishlist" rows="5">Orleans Standard
+Conifer
+Arjunan Bow
+Crimson Sapphire</textarea>
 			<ul id="queries"></ul>
 			<div id="add-query"></div>
 			<label for="exclude-list">Excluding</label>
@@ -48,420 +49,573 @@ Silver Fan</textarea>
 			<textarea id="draw-data" name="draw-data" rows="10">SS Rare Rates 6.00%
 SS Rare Character Weapons Rates
 Dainsleif
-  (Altair) 0.038%
+  (Altair) 0.020%
 Lohengrin
-  (Percival) 0.038%
+  (Percival) 0.020%
 Claíomh Solais
-  (Charlotta) 0.038%
-Murgleis
-  (Katalina) 0.250%
+  (Charlotta) 0.020%
+Gottfried
+  (Aglovale) 0.020%
 Nagelring
-  (Izmir) 0.038%
+  (Izmir) 0.020%
 Ascalon
-  (Siegfried) 0.038%
+  (Siegfried) 0.020%
+Deep Desire
+  (Vira) 0.020%
 Greatsword Andalius
-  (Aletheia) 0.038%
+  (Aletheia) 0.020%
+Heiliges Schwert
+  (Lancelot) 0.020%
 Yyrkoon
-  (Yuisis) 0.038%
+  (Yuisis) 0.020%
 Caladbolg
-  (Jeanne d'Arc) 0.038%
+  (Jeanne d'Arc) 0.020%
 Ethereal Lasher
-  (Ferry) 0.038%
+  (Ferry) 0.020%
 Hauteclaire
-  (Albert) 0.038%
+  (Albert) 0.020%
 Hrotti
-  (Seruel) 0.038%
+  (Seruel) 0.020%
 Symbol of Justice
-  (Baotorda) 0.038%
+  (Baotorda) 0.020%
 Blutgang
-  (Black Knight) 0.038%
+  (Black Knight) 0.040%
 Disparia
-  (Jeanne d'Arc) 0.038%
+  (Jeanne d'Arc) 0.020%
+Fallen Sword
+  (Olivia) 0.040%
 Gram
-  (Beatrix) 0.038%
+  (Beatrix) 0.020%
 Lyst Sin
-  (Vira) 0.038%
+  (Vira) 0.020%
 Mistilteinn
-  (Vaseraga) 0.038%
+  (Vaseraga) 0.020%
 Hoarfrost Blade Persius
-  (Lancelot) 0.038%
+  (Lancelot) 0.020%
 Phantom Thief Blade
-  (Chat Noir) 0.038%
+  (Chat Noir) 0.020%
 Arsene
-  (Catherine) 0.038%
+  (Catherine) 0.020%
+Mirror-Blade Shard
+  (Alexiel) 0.040%
+Thorny Rose
+  (Rosetta) 0.020%
 Heaven's Cloud
-  (Petra) 0.038%
-Love Eternal
-  (Rosetta) 0.038%
-Reunion
-  (Lecia) 0.038%
+  (Petra) 0.020%
+Diamond Edge
+  (De La Fille) 0.020%
 Thunder Dirk Jove
-  (Agielba) 0.038%
+  (Agielba) 0.020%
 Twin Helix
-  (Rosamia) 0.038%
+  (Rosamia) 0.020%
 Azoth
-  (Vania) 0.038%
+  (Vania) 0.020%
 Bloody Scar
-  (Veight) 0.038%
+  (Veight) 0.020%
+Gandring
+  (Tanya) 0.020%
 Parazonium
-  (Orchid) 0.038%
+  (Orchid) 0.040%
 Brionac
-  (Zeta) 0.038%
+  (Zeta) 0.020%
+Feendrache Pennant
+  (Lancelot and Vane) 0.020%
 Luin
-  (Heles) 0.038%
+  (Heles) 0.020%
 Pilum
-  (Nezahualpilli) 0.038%
+  (Nezahualpilli) 0.020%
+Sacred Lance
+  (Athena) 0.020%
 Daemon's Spine
-  (Anne) 0.038%
+  (Anne) 0.020%
+Draco Horn
+  (Grea) 0.020%
+Galilei's Insight
+  (Europa) 0.040%
 Gae Derg
-  (Razia) 0.038%
+  (Razia) 0.020%
 Gargantua
-  (Arulumaya) 0.038%
+  (Arulumaya) 0.020%
+Deirdre's Symbol
+  (Heles) 0.020%
+Galactic Impact
+  (Sen) 0.020%
+Orleans Standard
+  (Jeanne d'Arc) 0.300%
 Turpin Spear
-  (Carmelina) 0.038%
+  (Carmelina) 0.020%
+Cletine
+  (Zeta) 0.020%
+Conifer
+  (Naoise) 0.300%
 Eden
-  (Lucio) 0.038%
-Ramulus
-  (Anila) 0.038%
+  (Lucio) 0.040%
 Shadow Viperlance
-  (Azazel) 0.038%
+  (Azazel) 0.020%
 Skyrend Spear
-  (Forte) 0.038%
+  (Forte) 0.020%
 Sunspot Spear
-  (Zeta) 0.038%
+  (Zeta) 0.020%
 Scarlet Crest Axe
-  (Yuel) 0.038%
+  (Yuel) 0.020%
+Two-by-Four
+  (Tsubasa) 0.020%
 Way Flyer
-  (Aoidos) 0.038%
+  (Aoidos) 0.020%
 Blossom Axe
-  (Vane) 0.038%
+  (Vane) 0.020%
 Mettle
-  (Nemone) 0.038%
+  (Nemone) 0.020%
+Wurtzite Scythe
+  (Vaseraga) 0.020%
 Split End
-  (Melissabelle) 0.038%
+  (Melissabelle) 0.020%
 Windflash
-  (Gawain) 0.038%
+  (Gawain) 0.020%
+Certificus
+  (Vira) 0.040%
+Claidheamh Soluis
+  (Charlotta) 0.020%
+Full Metal Recoil
+  (Silva) 0.020%
 Ukonvasara
-  (Lady Grey) 0.038%
+  (Lady Grey) 0.020%
+Master Key
+  (Wulf and Renie) 0.020%
 Soul Eater
-  (Hallessena) 0.038%
+  (Hallessena) 0.020%
 Vassago
-  (Melleau) 0.038%
+  (Melleau) 0.020%
 Forbidden Inferno
-  (Anthuria) 0.038%
+  (Anthuria) 0.020%
 Illusion Scepter
-  (Magisa) 0.038%
+  (Magisa) 0.020%
 Starblaze Rings
-  (Zahlhamelina) 0.038%
+  (Zahlhamelina) 0.020%
+Sunflower Wand
+  (Io) 0.020%
 Blue Sphere
-  (Drang ) 0.038%
+  (Drang) 0.040%
 Ice Crystal Staff
-  (Lily) 0.038%
+  (Lily) 0.020%
 Montague's Oath
-  (Romeo) 0.038%
+  (Romeo) 0.020%
 Ouroboros
-  (Cagliostro) 0.038%
+  (Cagliostro) 0.020%
 Thyrsus
-  (De La Fille) 0.038%
+  (De La Fille) 0.020%
 Kerykeion
-  (De La Fille) 0.038%
+  (De La Fille) 0.020%
+Returner Staff
+  (Yurius) 0.020%
 Wing of the Pure
-  (Korwa) 0.038%
+  (Korwa) 0.020%
 Capulet's Oath
-  (Juliet) 0.038%
-Gambanteinn
-  (Io) 0.038%
+  (Juliet) 0.020%
 Sealed Claustrum
-  (Sarunan) 0.038%
+  (Sarunan) 0.020%
 Black Ouroboros
-  (Cagliostro) 0.038%
+  (Cagliostro) 0.020%
 Gridarvor
-  (Marquiares) 0.038%
+  (Marquiares) 0.020%
 Kalaurops
-  (Sarunan) 0.038%
-Benedia
-  (Rackam) 0.038%
+  (Sarunan) 0.020%
 Meteora
-  (Yngwie) 0.038%
+  (Yngwie) 0.020%
 Vlisragna
-  (Silva) 0.038%
-AK-4A
-  (Eugen) 0.038%
+  (Silva) 0.020%
+White Hawk
+  (Cucouroux) 0.020%
 Stratomizer
-  (Eustace) 0.038%
+  (Eustace) 0.020%
 Far Away
-  (Lennah) 0.038%
+  (Lennah) 0.020%
+Tiamat Bolt Prime
+  (Tiamat) 0.020%
+Railgun
+  (Robomi) 0.020%
+Ruler of Fate
+  (Zooey) 0.020%
+Arachne
+  (Freezie) 0.020%
+Ishtar
+  (Eustace) 0.020%
 Blushing Blossom Pin
-  (Societte) 0.038%
+  (Societte) 0.020%
 Brahma Gauntlet
-  (Ghandagoza) 0.038%
+  (Ghandagoza) 0.020%
 Draco Claw
-  (Grea) 0.038%
+  (Grea) 0.020%
 Magma Gauntlet
-  (Aliza) 0.038%
+  (Aliza) 0.020%
 Metal Hand
-  (Lady Katapillar and Vira) 0.038%
+  (Lady Katapillar and Vira) 0.020%
 Scarlet Vane
-  (Societte) 0.038%
+  (Societte) 0.020%
 Ancient Bandages
-  (Ayer) 0.038%
+  (Ayer) 0.020%
+Neko Punch Pro
+  (Dante and Freiheit) 0.020%
+Wyrmtiger Claw
+  (Soriz) 0.020%
 Deirdre's Claws
-  (Scathacha) 0.038%
+  (Scathacha) 0.020%
 Gothic Cutlery
-  (Dorothy and Claudia) 0.038%
+  (Dorothy and Claudia) 0.020%
 Coco & Mimi
-  (Cerberus) 0.038%
+  (Cerberus) 0.020%
+Cute Ribbon
+  (Zooey) 0.040%
+Ruling Pen
+  (Lunalu) 0.020%
+Arjunan Bow
+  (Ilsa) 0.300%
+Purifying Thunderbolt
+  (Shiva) 0.040%
 Roseate Aetherial Bow
-  (Metera) 0.038%
-Gallinarius
-  (Mahira) 0.038%
+  (Metera) 0.020%
+Gandiva
+  (Ilsa) 0.020%
 Aetherial Bow
-  (Metera) 0.038%
+  (Metera) 0.020%
 Heroic Bow
-  (Feena) 0.038%
+  (Feena) 0.020%
+Levin Shooter
+  (Levin Sisters) 0.020%
 Mobius Strip
-  (Clarisse) 0.038%
+  (Clarisse) 0.020%
 Melodic Sphere
-  (Lilele) 0.038%
+  (Lilele) 0.020%
 Ocean Harp
-  (Sophia) 0.038%
+  (Sophia) 0.020%
 Bella Aeterna
-  (Yggdrasil) 0.038%
+  (Yggdrasil) 0.020%
 Sandcastle Song-Lume
-  (Sara) 0.038%
-Cords of Heaven Lillah
-  (Arriet) 0.038%
+  (Sara) 0.020%
+Cords of Heaven Lillah 
+  (Arriet) 0.020%
+Cythara Anglica
+  (Selfira) 0.020%
 Fusion Mobius
-  (Clarisse) 0.038%
+  (Clarisse) 0.020%
 Ixaba
-  (Sturm) 0.038%
+  (Sturm) 0.040%
+Tanzanite Blade
+  (Therese) 0.020%
 Izayoi
-  (Yuel) 0.450%
+  (Yuel) 0.020%
 Venustas
-  (Narmaya) 0.038%
+  (Narmaya) 0.020%
+Crimson Sapphire
+  (Yuel) 0.600%
 Dragon Slayer
-  (Amira) 0.038%
+  (Amira) 0.020%
+Sinensis
+  (Siegfried) 0.020%
 Fudo-Kuniyuki
-  (Yodarha) 0.038%
+  (Yodarha) 0.020%
+Gigante Slicer
+  (Nicholas) 0.020%
+Mikazuki
+  (Danua) 0.020%
 SS Rare Summon Rates
-Agni 0.030%
-Athena 0.030%
-Prometheus 0.030%
-Satyr 0.030%
-Sethlans 0.030%
-Shiva 0.030%
-Twin Elements 0.030%
-Zaoshen 0.030%
-Bonito 0.030%
-Ca Ong 0.030%
-Europa 0.030%
-Grani 0.030%
-Kaguya 0.030%
-Macula Marius 0.030%
-Neptune 0.030%
-Oceanus 0.030%
-Snow White 0.030%
-Varuna 0.030%
-Ankusha 0.030%
-Baal 0.030%
-Cybele 0.030%
-Gilgamesh 0.030%
-Godsworn Alexiel 0.030%
-Medusa 0.030%
-Tezcatlipoca 0.030%
-Titan 0.030%
-Garuda 0.030%
-Garula, Shining Hawk 0.030%
-Morrigna 0.030%
-Nezha 0.030%
-Quetzalcoatl 0.030%
-Rose Queen 0.030%
-Setekh 0.030%
-Siren 0.030%
-Zephyrus 0.030%
-Aphrodite 0.030%
-Apollo 0.030%
-Grand Order 0.030%
-Hector 0.030%
-Lucifer 0.030%
-Odin 0.030%
-Thor 0.030%
-Vortex Dragon 0.030%
-Zeus 0.030%
-Anubis 0.030%
-Bahamut 0.030%
-Dark Angel Olivia 0.030%
-Hades 0.030%
-Lich 0.030%
-Nacht 0.030%
-Satan 0.030%
-Typhon 0.030%
+Agni 0.016%
+Athena 0.016%
+Michael 0.016%
+Prometheus 0.016%
+Satyr 0.016%
+Sethlans 0.016%
+Shiva 0.016%
+Sylph, Flutterspirit of Purity 0.016%
+Twin Elements 0.016%
+Zaoshen 0.016%
+Bonito 0.016%
+Ca Ong 0.016%
+Europa 0.016%
+Gabriel 0.016%
+Grani 0.016%
+Kaguya 0.016%
+Macula Marius 0.016%
+Macula Marius
+  (Summer) 0.250%
+Neptune 0.016%
+Oceanus 0.016%
+Poseidon, the Tide Father 0.016%
+Snow White 0.016%
+Varuna 0.016%
+Ankusha 0.016%
+Baal 0.016%
+Cybele 0.016%
+Gilgamesh 0.016%
+Godsworn Alexiel 0.016%
+Gorilla 0.016%
+Marduk, Battlefield Reaper 0.016%
+Medusa 0.016%
+Tezcatlipoca 0.016%
+Titan 0.016%
+Uriel 0.016%
+Anat, for Love and War 0.016%
+Freyr 0.016%
+Garuda 0.016%
+Garula, Shining Hawk 0.016%
+Grimnir 0.016%
+Hamsa 0.016%
+Morrigna 0.016%
+Nezha 0.016%
+Quetzalcoatl 0.016%
+Raphael 0.016%
+Rose Queen 0.016%
+Setekh 0.016%
+Siren 0.016%
+Zephyrus 0.016%
+Adramelech 0.016%
+Aphrodite 0.016%
+Apollo 0.016%
+Grand Order 0.016%
+Halluel and Malluel 0.016%
+Hector 0.016%
+Lucifer 0.250%
+Magus, Triad of Wisdom 0.016%
+Odin 0.016%
+Thor 0.016%
+Vortex Dragon 0.016%
+Zeus 0.016%
+Anubis 0.016%
+Bahamut 0.016%
+Cerberus, Hellhound Trifecta 0.016%
+Dark Angel Olivia 0.016%
+Hades 0.016%
+Lich 0.016%
+Nacht 0.016%
+Satan 0.016%
+Tsukuyomi 0.016%
+Typhon 0.016%
 S Rare Rates 15.00%
 S Rare Character Weapons Rates
 Ember Blade
-  (Carren) 0.043%
+  (Carren) 0.032%
 Ram-Dao
-  (Gayne) 0.043%
+  (Gayne) 0.032%
 Tanzanite Sword Mikoh
-  (Therese) 0.043%
+  (Therese) 0.032%
+Time-Tested Iron
+  (Rosine) 0.032%
 Aquablade
-  (Mina) 0.043%
+  (Mina) 0.032%
 Bottle o' Blossoms
-  (Lamretta) 0.043%
+  (Lamretta) 0.032%
+Floaty Sword
+  (Charlotta) 0.500%
+Macuahuitl
+  (Farrah) 0.500%
+Ripple Rapier
+  (Katalina) 0.032%
 Royal Rapier
-  (Ange) 0.043%
+  (Ange) 0.032%
 Sword of Sorcery
-  (Owen) 0.043%
+  (Owen) 0.032%
 Frying Pan
-  (Yaia) 0.043%
+  (Yaia) 0.032%
 Grand Edge
-  (Herja) 0.043%
+  (Herja) 0.032%
+Prideful Sword
+  (Beatrix) 0.032%
+Balisarde
+  (Arthur and Mordred) 0.032%
+Kilij
+  (Juri) 0.032%
+Pirate Sword
+  (Lecia) 0.032%
 Silver Fan
-  (Karteira) 1.500%
+  (Karteira) 0.032%
+Summer Souteyrand
+  (Yuisis) 0.032%
 White Flag
-  (Mimlemel and Stumpeye) 0.043%
+  (Mimlemel and Stumpeye) 0.032%
 Arondight
-  (Baotorda) 0.043%
+  (Baotorda) 0.032%
+Samurai Sword
+  (Mirin) 0.032%
 True Teardrop
-  (Vermeil) 0.043%
+  (Vermeil) 0.032%
 Lyst
-  (Vira) 0.043%
+  (Vira) 0.032%
 Purity Blade
-  (Lucius) 0.043%
+  (Lucius) 0.032%
+Silver Shotel
+  (Randall) 0.032%
 Tilvung
-  (Helnar) 0.043%
+  (Helnar) 0.032%
 Soulbond Dirk
-  (Teena) 0.043%
+  (Teena) 0.032%
 Shrike's Beak
-  (Jamil) 0.043%
+  (Jamil) 0.032%
 Sword of Lisblanc
-  (Farrah) 0.043%
+  (Farrah) 0.032%
 Soul Edge
-  (Ferry) 0.043%
+  (Ferry) 0.032%
 Katzbalger
-  (Jamil) 0.043%
+  (Jamil) 0.032%
 Puppet Knife
-  (Danua) 0.043%
+  (Danua) 0.032%
 Scalpel
-  (Shao) 0.043%
+  (Shao) 0.032%
 Wyrm Claw
-  (Tanya) 0.043%
+  (Tanya) 0.032%
 Flare Glaive
-  (Mariah) 0.043%
+  (Mariah) 0.032%
 Raging Halberd
-  (Vane) 0.043%
+  (Vane) 0.032%
 Narval
-  (Ulamnuran) 0.043%
+  (Ulamnuran) 0.032%
 Titanium Harpoon
-  (Sig) 0.043%
+  (Sig) 0.032%
+Divine Spear
+  (Razia) 0.032%
 Dreadflayer
-  (Laguna) 0.043%
+  (Laguna) 0.032%
 Giant Fork
-  (Redluck) 0.043%
+  (Redluck) 0.032%
 Golden Mop
-  (Claudia) 0.043%
+  (Claudia) 0.032%
+Macho Hunter Weapon
+  (The Lowain Bros) 0.032%
+Serpentine Longspear
+  (Leona) 0.032%
 Lance d'Espoir
-  (Jeanne d'Arc) 0.043%
+  (Jeanne d'Arc) 0.032%
 Brocken Lance
-  (Deliford) 0.043%
+  (Deliford) 0.032%
 Massive Axe
-  (Ryan) 0.043%
+  (Ryan) 0.032%
 Fremel Hammer
-  (Almeida) 0.043%
+  (Almeida) 0.032%
+Gold-Plated Fremel
+  (Almeida) 0.500%
 Great Hammer
-  (Galadar) 0.043%
+  (Galadar) 0.032%
 Cloud Tomahawk
-  (Eso) 0.043%
+  (Eso) 0.032%
 Holy Axe
-  (Sevastien) 0.043%
+  (Sevastien) 0.032%
 Golden Woofer
-  (Daetta) 0.043%
+  (Daetta) 0.032%
 Voulge
-  (Zaja) 0.043%
+  (Zaja) 0.032%
 Arson
-  (Elmott) 0.043%
+  (Elmott) 0.032%
 Arson Link
-  (Blazing Teacher Elmott) 0.043%
+  (Blazing Teacher Elmott) 0.032%
 Nature's Mystery
-  (Dante) 0.043%
+  (Dante) 0.032%
 Soothing Torch
-  (Rosamia) 0.043%
+  (Rosamia) 0.032%
 Witch's Broom
-  (Anna) 0.043%
+  (Anna) 0.032%
 Ice Bough Staff
-  (Erin) 0.043%
+  (Erin) 0.032%
 Spritewood Staff
-  (Mishra) 0.043%
+  (Mishra) 0.032%
+Tughril
+  (Nezahualpilli) 0.032%
 Zhonpeli
-  (Lamretta) 0.043%
+  (Lamretta) 0.032%
 Aerial Cane
-  (Arusha) 0.043%
+  (Arusha) 0.032%
 Flower Crown
-  (Jasmine) 0.043%
+  (Jasmine) 0.032%
 Wind-Rhyme Staff
-  (Noa) 0.043%
+  (Noa) 0.032%
 Sacred Codex
-  (Johann) 0.043%
+  (Johann) 0.032%
+Staff of the Star Seeker
+  (Sophia) 0.032%
 Cursed Cane
-  (Will) 0.043%
+  (Will) 0.032%
 Shadow Scepter
-  (Goblin Mage) 0.043%
+  (Goblin Mage) 0.032%
 Dolphin
-  (Cucouroux) 0.043%
+  (Cucouroux) 0.032%
 Fire Piece
-  (Mary) 0.043%
+  (Mary) 0.032%
+Signal Flare
+  (Karva) 0.032%
 Colorful Crackerjack
-  (Pengy) 0.043%
+  (Pengy) 0.032%
 Quarrel
-  (Sahli Lao) 0.043%
+  (Sahli Lao) 0.032%
 Handy Arquebus
-  (Jessica) 0.043%
+  (Jessica) 0.032%
 Standard Albion Bolt
-  (Tyre) 0.043%
+  (Tyre) 0.032%
+Genius Squared
+  (Skull) 0.032%
 Hunter's Rifle
-  (Ludmila) 0.043%
+  (Ludmila) 0.032%
 Chain Knuckles
-  (Ezecrain) 0.043%
+  (Ezecrain) 0.032%
 Crimson Talons
-  (Sen) 0.043%
+  (Sen) 0.032%
 Cup and Saucer
-  (Dorothy) 0.043%
+  (Dorothy) 0.032%
+Red-Hot Noodles
+  (Ippatsu) 0.032%
+Rope Knuckles
+  (Ghandagoza) 0.032%
+Epoxy Boogie Plates
+  (Cailana) 0.032%
 Kaiser Knuckles
-  (Alec) 0.043%
+  (Alec) 0.032%
+Demitasse
+  (Catherine) 0.032%
 Impact Knuckles
-  (Soriz) 0.043%
+  (Soriz) 0.032%
 Metal Glove
-  (Ladiva) 0.043%
+  (Ladiva) 0.032%
+Mythril Tonfa
+  (Vanzza) 0.032%
+Sudarshana
+  (Carmelina) 0.032%
 Merciless Chastening
-  (Hazen) 0.043%
+  (Hazen) 0.032%
+Crocskin Glove
+  (Barawa) 0.032%
 Heavy Blast Knuckles
-  (Feather) 0.043%
+  (Feather) 0.032%
 Misanga Bracelet
-  (J.J.) 0.043%
+  (J.J.) 0.032%
 Tiger Fang
-  (Mimlemel) 0.043%
+  (Mimlemel) 0.032%
 Cruel Claw
-  (Predator) 0.043%
+  (Predator) 0.032%
+Summer Night Peak
+  (Arulumaya) 0.032%
 Vampire's Nail
-  (Vania) 0.043%
+  (Vania) 0.032%
 Glass Bow
-  (Sutera) 0.043%
+  (Sutera) 0.032%
 Ice Bow
-  (Milleore) 0.043%
+  (Milleore) 0.032%
 Sutera's Bow
-  (Sutera) 0.043%
+  (Sutera) 0.032%
 Slingshot
-  (Sarya) 0.043%
+  (Sarya) 0.032%
 Aquarium Harp
-  (Ejaeli) 0.043%
+  (Ejaeli) 0.032%
+Summer Beach Sphere
+  (Lilele) 0.032%
 Songsmith's Harp
-  (Elta) 0.043%
+  (Elta) 0.032%
 Stravaria
-  (Keehar) 0.043%
+  (Keehar) 0.032%
+Humming Bard
+  (Elta) 0.032%
 Wandering Blade
-  (Lucius) 0.043%
+  (Lucius) 0.032%
+Unsigned Blade
+  (Mirin) 0.032%
 Zanbato
-  (Sevilbarra) 0.043%
+  (Sevilbarra) 0.032%
 S Rare Non-Character Weapons Rates
 Fragarach 0.166%
 Almace 0.166%
@@ -524,119 +678,127 @@ Onyx Carbuncle 0.190%
 Rare Rates 79.00%
 Rare Character Weapons Rates
 Fire Sword
-  (Farrah) 0.210%
+  (Farrah) 0.166%
 Vintage Flat Iron
-  (Rosine) 0.210%
+  (Rosine) 0.166%
 Shrimp Lure
-  (Yodarha) 0.210%
+  (Yodarha) 0.166%
 White Sword
-  (Bridgette) 0.210%
+  (Bridgette) 0.166%
 Heavy Metal Comb
-  (La Coiffe) 0.210%
+  (La Coiffe) 0.166%
 Two-Handed Sword
-  (Herja) 0.210%
+  (Herja) 0.166%
 Xiphos
-  (Volenna) 0.210%
+  (Volenna) 0.166%
 Lightbringer
-  (Stan) 0.210%
+  (Stan) 0.166%
 Old Sword
-  (Krugne) 0.210%
+  (Krugne) 0.166%
 Paper Fan
-  (Karteira) 0.210%
+  (Karteira) 0.166%
 Practice Sword
-  (Thelonim) 0.210%
+  (Thelonim) 0.166%
 Blue Crest
-  (Cordelia) 0.210%
+  (Cordelia) 0.166%
 Prism Tear
-  (Vermeil) 0.210%
+  (Vermeil) 0.166%
 Thunder Rapier
-  (Rosamia) 0.210%
+  (Rosamia) 0.166%
 Dark Sword
-  (Leonora) 0.210%
+  (Leonora) 0.166%
 Broken Bottle
-  (Lamretta) 0.210%
+  (Lamretta) 0.166%
 Little Scarlet
-  (Drusilla) 0.210%
+  (Drusilla) 0.166%
+Wooden Dagger
+  (Walder) 2.000%
 Mandau
-  (Zehek) 0.210%
+  (Zehek) 0.166%
+Spin Blade
+  (Spinnah) 0.166%
 Bloody Piercer
-  (Tanya) 0.210%
+  (Tanya) 0.166%
+Cleaver
+  (Lowain) 0.166%
 Switchblade
-  (Lowain) 0.210%
+  (Lowain) 0.166%
 Silver Pole
-  (Joel) 0.210%
+  (Joel) 0.166%
 Ghillie Fork
-  (Elmelaura) 0.210%
+  (Elmelaura) 0.166%
 Night Horn
-  (Deliford) 0.210%
+  (Deliford) 0.166%
 Iron Pliers
-  (Viceroy) 0.210%
+  (Viceroy) 0.166%
 Soldier Axe
-  (Ryan) 0.210%
+  (Ryan) 0.166%
 Draph Hammer
-  (Galadar) 0.210%
+  (Galadar) 0.166%
 Sky Tomahawk
-  (Eso) 0.210%
+  (Eso) 0.166%
 Morning Star
-  (Daetta) 0.210%
+  (Daetta) 0.166%
 Forest Hermit Staff
-  (Dante) 0.210%
+  (Dante) 0.166%
 Rubia Rod
-  (Camieux) 0.210%
+  (Camieux) 0.166%
 Torch
-  (Camieux) 0.210%
+  (Camieux) 0.166%
 Snowman Rod
-  (Suframare) 0.210%
+  (Suframare) 0.166%
 Student Notebook
-  (Alistair) 0.210%
+  (Alistair) 0.166%
 Stone Pole
-  (Norcel) 0.210%
+  (Norcel) 0.166%
 Taiaha
-  (Jasmine) 0.210%
+  (Jasmine) 0.166%
 Feather Wand
-  (Anna) 0.210%
+  (Anna) 0.166%
 Moss Tree Staff
-  (Petra) 0.210%
+  (Petra) 0.166%
 Light Staff
-  (Philosophia) 0.210%
+  (Philosophia) 0.166%
 The Cross
-  (Will) 0.210%
+  (Will) 0.166%
 Derringer
-  (Barawa) 0.210%
+  (Barawa) 0.166%
 Flame Bolt
-  (Karva) 0.210%
+  (Karva) 0.166%
 Sawed-Off Shotgun
-  (Garma) 0.210%
+  (Garma) 0.166%
 Self Defender
-  (Richard) 0.210%
+  (Richard) 0.166%
 Petronel
-  (Mary) 0.210%
+  (Mary) 0.166%
 Chopsticks
-  (Ippatsu) 0.210%
+  (Ippatsu) 0.166%
 Boogie Plates
-  (Cailana) 0.210%
+  (Cailana) 0.166%
+Cold Noodles
+  (Ippatsu) 0.166%
 Oven Mitts
-  (Nene) 0.210%
+  (Nene) 0.166%
 Tattoo Fist
-  (Randall) 0.210%
+  (Randall) 0.166%
 Iron Guard
-  (Balurga) 0.210%
+  (Balurga) 0.166%
 Mythril Knuckles
-  (Hazen) 0.210%
+  (Hazen) 0.166%
 Tonfa
-  (Vanzza) 0.210%
+  (Vanzza) 0.166%
 Enchanted Nail
-  (Chloe) 0.210%
+  (Chloe) 0.166%
 Light Buckler
-  (Pavidus) 0.210%
+  (Pavidus) 0.166%
 Blast Knuckles
-  (Feather) 0.210%
+  (Feather) 0.166%
 Flame Bow
-  (Flesselles) 0.210%
+  (Flesselles) 0.166%
 Bronze Bell
-  (Bakura) 0.210%
+  (Bakura) 0.166%
 Night Bell
-  (Lunalu) 0.210%
+  (Lunalu) 0.166%
 Rare Non-Character Weapons Rates
 Anelace 0.646%
 Claymore 0.646%
@@ -728,7 +890,7 @@ Ghost Light 1.041%
 Cave Bat 1.041%
 Imp 1.041%
 Skeleton 1.041%</textarea>
-			<small>Built-in draw rates last updated 2017-03-05.</small>
+			<small>Built-in draw rates last updated 2019-03-18.</small>
 		</form>
 		<div class="chart" id="chart-cumulative"></div>
 		<h3>Probability of drawing
